tests/valid-gd-scripts/unresolved_assign.gd
class X:
	func foo(z):
		var x
		x = 1
		x += 1
		x = {}
