tests/invalid-gd-scripts/legacy_assert.gd
func foo():
	assert 1 == 1
